Fix alignment of menu / main window bottom

--- a/sao/src/theme/coog/sao.less
+++ b/sao/src/theme/coog/sao.less
@@ -265,3 +265,17 @@ div.readonly div.CodeMirror-sizer {
 div.CodeMirror {
     height: 460px;
 }
+
+///////////////////////////////////////////////////////////////////////////////
+// Fixes
+///////////////////////////////////////////////////////////////////////////////
+
+// bottom alignment of menu / main tab ////////////////////////////////////////
+#menu {
+    padding-bottom: 5px;
+    height: calc(100% - 2px) !important;
+}
+#tabs {
+    padding-bottom: 0px;
+}
+///////////////////////////////////////////////////////////////////////////////
